fixed a lot of alignment issues particularly with the about page it shrinks in size.  still need to fix the aspect ratio of the youtube video getting wonky when the page gets big (want to set a max size)

--- a/style.css
+++ b/style.css
@@ -166,8 +166,6 @@ figurelt
     display: block;
     margin-left: auto;
     margin-right: auto;
-
-
 }
 
 .mainpart
@@ -176,9 +174,12 @@ figurelt
     background-color: grey;
     margin-top:10px;
     width:100%;
-    max-width:1000px;
-    float:center;
-    border:1px solid;
+}
+
+iframe.fbframe
+{
+    float:right;
+
 }
 
 .footer
@@ -191,5 +192,14 @@ figurelt
     .column
     {
         width: 100%;
+	padding-bottom:20px;
+	text-align:center;
     }
+
+    iframe.fbframe
+    {
+	float:left;
+    }
+
+   
 }
